--- a/src/app/[locale]/(registration)/globals.css
+++ b/src/app/[locale]/(registration)/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .slider-item {
-  padding: 0 10px; /* Adjust the padding to add space between cards */
+  /*padding: 0 10px;  Adjust the padding to add space between cards */
   transition: all 0.5s ease-in-out;
 }
 
